--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,6 @@
 </head>
 
 <body>
-  <!-- <div id="content">
-    <header id="sidebar" class="container">
-      <div class="panel">
-        <div class="panel-left">
-          <button id="add" class="btn btn-blue">Add</button>
-          <button id="update" class="btn btn-blue">Update</button>
-        </div>
-        <div class="panel-right">
-          <span class="icon-search"></span>
-          <input id="search" type="text" class="search" placeholder="Event, date or participant">
-          <div id="results" class="search-results"></div>
-        </div>
-      </div>
-    </header>
-    <main class="calendar container">
-
-      <div class="calendar-date">
-        <button id="prev" class="btn btn-prev btn-default">
-          <</button> <span id="current" class="calendar-date__current"></span>
-            <button id="next" class="btn btn-next btn-default">></button>
-            <button id="today" class="btn btn-today btn-default">Today</button>
-      </div>
-      <div id="calendar-table">
-      </div>
-    </main>
-  </div> -->
-
   <header class="header container">
     <div class="manage-panel">
       <button id="add" class="btn btn-blue">Add</button>
@@ -53,22 +26,19 @@
     <!-- /.search-panel -->
   </header>
   <!-- /.header -->
-
-  <main class="main calendar container">
+  <main class="calendar container">
     <div class="calendar-date">
       <button id="prev" class="btn btn-prev btn-default">
-        <</button> <span id="current" class="calendar-date__current"></span>
-          <button id="next" class="btn btn-next btn-default">></button>
-          <button id="today" class="btn btn-today btn-default">Today</button>
+      </button> <span id="current" class="calendar-date__current"></span>
+      <button id="next" class="btn btn-next btn-default"></button>
+      <button id="today" class="btn btn-today btn-default">Today</button>
     </div>
     <!-- /.calendar-date -->
     <div class="calendar-body">
-      <div>Hello</div>
     </div>
     <!-- /.calendar-table -->
   </main>
   <!-- /.main container calendar -->
-
 </body>
 
 </html>
