PR: add eventlisteners for manage-panel

--- a/src/index.html
+++ b/src/index.html
@@ -12,33 +12,38 @@
 </head>
 
 <body>
-  <header class="header container">
-    <div class="manage-panel">
-      <button id="add" class="btn btn-blue">Add</button>
-      <button id="update" class="btn btn-blue">Update</button>
-    </div>
-    <!-- /.manage-panel -->
-    <div class="search-panel">
-      <span class="icon"></span>
-      <input id="search" type="text" class="search" placeholder="Event, date or participant">
-      <div id="results" class="search-panel__results"></div>
-    </div>
-    <!-- /.search-panel -->
-  </header>
-  <!-- /.header -->
-  <main class="calendar container">
-    <div class="calendar-date">
-      <button id="prev" class="btn btn-prev btn-default">
-      </button> <span id="current" class="calendar-date__current"></span>
-      <button id="next" class="btn btn-next btn-default"></button>
-      <button id="today" class="btn btn-today btn-default">Today</button>
-    </div>
-    <!-- /.calendar-date -->
-    <div class="calendar-body">
-    </div>
-    <!-- /.calendar-table -->
-  </main>
-  <!-- /.main container calendar -->
+  <div id="page">
+
+
+    <header class="header container">
+      <div class="manage-panel">
+        <button id="add" class="btn btn-blue">Add</button>
+        <button id="update" class="btn btn-blue">Update</button>
+      </div>
+      <!-- /.manage-panel -->
+      <div class="search-panel">
+        <span class="icon"></span>
+        <input id="search" type="text" class="search" placeholder="Event, date or participant">
+        <div id="results" class="search-panel__results"></div>
+      </div>
+      <!-- /.search-panel -->
+    </header>
+    <!-- /.header -->
+    <main class="calendar container">
+      <div class="calendar-date">
+        <button id="prev" class="btn btn-prev btn-default">
+        </button> <span id="current" class="calendar-date__current"></span>
+        <button id="next" class="btn btn-next btn-default"></button>
+        <button id="today" class="btn btn-today btn-default">Today</button>
+      </div>
+      <!-- /.calendar-date -->
+      <div class="calendar-body">
+      </div>
+      <!-- /.calendar-table -->
+    </main>
+    <!-- /.main container calendar -->
+  </div>
+  <!-- /#page -->
 </body>
 
 </html>
