some minor changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./src/css/reset.css">
   <link rel="stylesheet" href="./src/css/style.css">
   <title>Calendar</title>
-  <script src="./src/js/script.min.js"></script>
+  <script src="./src/js/script.js"></script>
 </head>
 
 <body>
